# Agents

./: .gitignore  CODE_TRACE_OUTLINE.md  README.md  example.py  example_agent.py  my_code.ipynb  notebook_example.ipynb  pyproject.toml  test_session.py
agent_framework/: README.md  __init__.py  agent.py  callbacks.py  llm.py  mcp.py  memory.py  models.py  tools.py  utils.py
agent_tools/: example_usage.py  file_tools.py  web_tools.py
chapter_06_memory/: 01_session_agent.py  02_core_memory_strategy.py  03_core_memory_update.py  04_sliding_window.py  05_summarization.py  06_conversation_search.py  07_task_long_term.py  08_user_long_term.py
examples/: README.md  __init__.py  demo.py  gaia_evaluation.py
gaia/: README.md  __init__.py  config.py  evaluator.py  example.py  file_problems.py  models.py  run.py
misc/: LANGCHAIN_COMPARISON.md  notebook_example.ipynb  tavily_mcp_server.py
misc/tutorials/: ADDITIONAL_EXERCISES.md  ARCHITECTURE_DIAGRAMS.md  EPISODE_01_INTRODUCTION.md  EPISODE_02_LLM_CALL.md  EPISODE_03_DATA_MODELS.md  EPISODE_04_LLM_CLIENT.md  EPISODE_05_AGENT_LOOP.md  EPISODE_06_TOOL_SYSTEM.md  EPISODE_07_TOOL_EXECUTION.md  EPISODE_08_MCP.md  EPISODE_09_MEMORY.md  EPISODE_10_WEB_DEPLOYMENT.md  EXERCISES.md  FEATURE_DOCUMENTATION.md  GITHUB_STRUCTURE.md  NEXT_STEPS.md  README.md  RESUME_GUIDE.md
rag/: chunking.py  embeddings.py  example.py  example2.py
scratch_agents/agents/: execution_context_ch6.py  tool_calling_agent_ch4_base.py  tool_calling_agent_ch4_structured_output.py  tool_calling_agent_ch6.py
web_app/: README.md  app.py
(+17 files in other folders)
